--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
-    <title>CitrusAlert</title>
+    <title>My Awesome App</title>
+    <meta name="description" content="My Awesome App description" />
   </head>
   <body>
     <div class="main" id="app"></div>
